# mecs_lib

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: ecs.hpp
src/cpp/cfg/: ecs_types.hpp
src/cpp/components/: Component.cpp  Component.hpp  ComponentsManager.cpp
src/cpp/entities/: EntitiesManager.cpp  EntitiesManager.hpp  Entity.cpp  Entity.hpp
src/cpp/events/: Event.cpp  Event.hpp  EventsManager.cpp  EventsManager.hpp  IEventListener.hxx
src/cpp/systems/: System.cpp  System.hpp  SystemsManager.hpp
src/cpp/test/: CMakeLists.txt  main.cpp  main.hpp
src/cpp/utils/: IDMap.hpp  IDStorage.hpp
